--- a/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
@@ -43,8 +43,8 @@
             </li>
 
             <li class="nav-item active">
-                <a asp-area="admin" asp-controller="Book" asp-action="AllBooks" class="nav-link">
-                    <i class="fas fa-book"></i><span>Manage Books</span>
+                <a asp-area="admin" asp-controller="Book" asp-action="UnapprovedBooks" class="nav-link">
+                    <i class="fas fa-book"></i><span>Manage Unapproved Books</span>
                 </a>
             </li>
 
