--- a/Web/Bookworm.Web/Areas/Admin/Views/Book/UnapprovedBooks.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Book/UnapprovedBooks.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IEnumerable<BookViewModel>
 
+<h2 class="text-center mt-5">Manage Unapproved Books</h2>
+
 <div class="row">
     @foreach (var book in Model)
     {
