--- a/Web/Bookworm.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -5,33 +5,37 @@
 
 <h1 class="text-center mt-5">Welcome to Admin Area!</h1>
 
-<div class="row mt-5 justify-content-center">
-    <div class="card border-left-primary shadow h-100 py-2">
-        <div class="card-body">
-            <div class="row align-items-center">
-                <div class="col mr-2">
-                    <div class=" font-weight-bold text-primary text-uppercase mb-1">
-                        Pending Book Requests
+<div class="d-flex justify-content-center gap-3 mt-5">
+    <div class="mb-4">
+        <div class="card border-left-primary shadow h-100 py-2">
+            <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                        <div class=" font-weight-bold text-primary text-uppercase mb-1">
+                            Pending Book Requests
+                        </div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">@unapprovedBooksCount</div>
                     </div>
-                    <div class="h5 mb-0 font-weight-bold text-gray-800">@unapprovedBooksCount</div>
-                </div>
-                <div>
-                    <i class="fas fa-book fa-2x ms-5"></i>
+                    <div class="col-auto">
+                        <i class="fas fa-book fa-2x"></i>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="card border-left-primary shadow h-100 py-2">
-        <div class="card-body">
-            <div class="row align-items-center">
-                <div class="col mr-2">
-                    <div class=" font-weight-bold text-primary text-uppercase mb-1">
-                        Pending Quotes Requests
+    <div class="mb-4">
+        <div class="card border-left-primary shadow h-100 py-2">
+            <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                    <div class="col">
+                        <div class=" font-weight-bold text-primary text-uppercase mb-1">
+                            Pending Quotes Requests
+                        </div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">@unapprovedQuotesCount</div>
                     </div>
-                    <div class="h5 mb-0 font-weight-bold text-gray-800">@unapprovedQuotesCount</div>
-                </div>
-                <div class="col-auto">
-                    <i class="fas fa-pen fa-2x"></i>
+                    <div class="col-auto">
+                        <i class="fas fa-pen fa-2x"></i>
+                    </div>
                 </div>
             </div>
         </div>
