--- a/Web/Bookworm.Web/Views/Book/All.cshtml
+++ b/Web/Bookworm.Web/Views/Book/All.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BookListingViewModel
 
 @{
-    this.ViewData["Title"] = "Books";
+    this.ViewData["Title"] = $"{Model.CategoryName}";
 }
 
 <div class="d-flex justify-content-center mt-5">
@@ -19,7 +19,7 @@
             <div class="col-md-3 mt-5 mb-4">
                 <a asp-controller="Book" asp-action="CurrentBook" asp-route-id="@book.Id">
                     <div class="card bg-dark text-light h-100">
-                        <img title="@book.Title" class="zoom" src="@book.ImageUrl" alt="Book" height="300">
+                        <img title="@book.Title" src="@book.ImageUrl" alt="@book.Title" height="300">
                     </div>
                 </a>
             </div>
@@ -28,11 +28,12 @@
 </div>
 @if (Model.BookCount > 0)
 {
-    <hr />
     <nav id="booksPagination" aria-label="...">
         <ul class="pagination justify-content-center">
-            <li class="page-item @if (Model.HasPreviousPage == false){<text>disabled</text>}">
-                   <a id="previous" class="page-link" asp-action="All" asp-route-categoryName="@Model.CategoryName" asp-route-page="@Model.PreviousPageNumber">Previous</a>
+            <li class="page-item @if (Model.HasPreviousPage == false){
+        <text>disabled</text>
+}">
+                <a id="previous" class="page-link" asp-action="All" asp-route-categoryName="@Model.CategoryName" asp-route-page="@Model.PreviousPageNumber">Previous</a>
             </li>
             @for (int i = Model.PageNumber - 3; i < Model.PageNumber; i++)
             {
@@ -54,7 +55,9 @@
                     <li class="page-item"><a class="page-link" asp-action="All" asp-route-categoryName="@Model.CategoryName" asp-route-page="@i">@i</a></li>
                 }
             }
-            <li class="page-item @if (Model.HasNextPage == false) {<text>disabled</text>}">
+            <li class="page-item @if (Model.HasNextPage == false) {
+        <text>disabled</text>
+}">
                 <a class="page-link" asp-action="All" asp-route-categoryName="@Model.CategoryName" asp-route-page="@Model.NextPageNumber">Next</a>
             </li>
         </ul>
