--- a/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Admin - Bookworm</title>
+    <title>@ViewData["Title"] - Bookworm</title>
     <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="~/lib/bootstrap/css/bootstrap.min.css">
     <link href="~/css/sb-admin-2.css" rel="stylesheet" asp-append-version="true">
@@ -43,26 +43,44 @@
             </li>
 
             <li class="nav-item active">
+                <a class="nav-link" asp-area="admin" asp-controller="Book" asp-action="ApprovedBooks">
+                    <i class="fas fa-book"></i>
+                    <span>Manage Approved Books</span>
+                </a>
+            </li>
+
+            <li class="nav-item active">
                 <a asp-area="admin" asp-controller="Book" asp-action="UnapprovedBooks" class="nav-link">
-                    <i class="fas fa-book"></i><span>Manage Unapproved Books</span>
+                    <i class="fas fa-book"></i>
+                    <span>Manage Unapproved Books</span>
+                </a>
+            </li>
+
+            <li class="nav-item active">
+                <a class="nav-link" asp-area="admin" asp-controller="Book" asp-action="DeletedBooks">
+                    <i class="fas fa-book"></i>
+                    <span>Manage Deleted Books</span>
                 </a>
             </li>
 
             <li class="nav-item active">
                 <a asp-area="admin" asp-controller="Quote" asp-action="ApprovedQuotes" class="nav-link">
-                    <i class="fas fa-pen icon"></i><span>Manage Approved Quotes</span>
+                    <i class="fas fa-pen icon"></i>
+                    <span>Manage Approved Quotes</span>
                 </a>
             </li>
 
             <li class="nav-item active">
                 <a asp-area="admin" asp-controller="Quote" asp-action="UnapprovedQuotes" class="nav-link">
-                    <i class="fas fa-pen icon"></i><span>Manage Unapproved Quotes</span>
+                    <i class="fas fa-pen icon"></i>
+                    <span>Manage Unapproved Quotes</span>
                 </a>
             </li>
 
             <li class="nav-item active">
                 <a asp-area="admin" asp-controller="Quote" asp-action="DeletedQuotes" class="nav-link">
-                    <i class="fas fa-pen icon"></i><span>Manage Deleted Quotes</span>
+                    <i class="fas fa-pen icon"></i>
+                    <span>Manage Deleted Quotes</span>
                 </a>
             </li>
 
