--- a/Web/Bookworm.Web/Areas/Admin/Views/Book/ApprovedBooks.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Book/ApprovedBooks.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BookViewModel>
+﻿@model List<BookViewModel>
 
 @{
     this.ViewData["Title"] = "Approved Books";
@@ -11,19 +11,37 @@
 else
 {
     <h2 class="text-center mt-5">Manage Approved Books</h2>
-    <div class="row">
-        @foreach (var book in Model)
-        {
-            <div class="col-md-3 mt-5 mb-4">
-                <div class="card">
-                    <img src="@book.ImageUrl" class="card-img-top" alt="@book.Title">
-                    <div class="card-body card-body-book no-gutters row-gap">
-                        <a class="btn btn-danger w-50 modalBtn" data-model-id="@book.Id" data-bs-toggle="modal" data-bs-target="#unapproveBookModal">Unapprove</a>
-                        <a asp-area="admin" asp-controller="Book" asp-action="CurrentBook" asp-route-bookId="@book.Id" asp-route-userId="@book.UserId" class="btn btn-success w-50">View</a>
-                    </div>
-                </div>
-            </div>
-        }
+    <div class="my-5">
+        <table class="table table-striped table-dark table-bordered" id="dataTable">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Book</th>
+                    <th class="text-center" scope="col">Unapprove</th>
+                    <th class="text-center" scope="col">View</th>
+                </tr>
+            </thead>
+            <tbody>
+                @for (int i = 0; i <= Model.Count() - 1; i++)
+                {
+                    <tr>
+                        <th scope="row" class="text-center align-middle">@(i + 1)</th>
+                        <td class="align-middle">@Model[i].Title</td>
+
+                        <td class="text-center align-middle">
+                            <a class="btn btn-danger modalBtn" data-model-id="@Model[i].Id" data-bs-toggle="modal" data-bs-target="#unapproveBookModal">
+                                <i class="fa-solid fa-circle-xmark fa-xl px-2"></i>
+                            </a>
+                        </td>
+                        <td class="text-center align-middle">
+                            <a asp-area="admin" asp-controller="Book" asp-action="CurrentBook" asp-route-bookId="@Model[i].Id" class="btn btn-success">
+                                <i class="fa-solid fa-expand fa-xl px-2"></i>
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
 }
 
@@ -52,4 +70,6 @@ else
 
 @section Scripts{
     <script src="~/js/modal.js"></script>
+    <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
+    <script src="~/js/datatable.js"></script>
 }
