--- a/Web/Bookworm.Web/Areas/Admin/Views/Book/UnapprovedBooks.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Book/UnapprovedBooks.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BookViewModel>
+﻿@model List<BookViewModel>
 
 @{
     this.ViewData["Title"] = "Unapproved Books";
@@ -11,26 +11,45 @@
 else
 {
     <h2 class="text-center mt-5">Manage Unapproved Books</h2>
-    <div class="row">
-        @foreach (var book in Model)
-        {
-            <div class="col-md-3 mt-5 mb-4">
-                <div class="card">
-                    <img src="@book.ImageUrl" class="card-img-top" alt="@book.Title">
-                    <div class="card-body card-body-book no-gutters">
-                        <div class="row-gap">
-                            <a class="btn btn-danger w-50 modalBtn" data-model-id="@book.Id" data-bs-toggle="modal" data-bs-target="#approveBookModal">Approve</a>
-                            <a asp-area="admin" asp-controller="Book" asp-action="CurrentBook" asp-route-bookId="@book.Id" asp-route-userId="@book.UserId" class="btn btn-success w-50">View</a>
-                        </div>
-                        <a class="btn btn-danger w-100 mt-3 modalBtn" data-model-id="@book.Id" data-bs-toggle="modal" data-bs-target="#deleteBookModal">Delete</a>
-                    </div>
-                </div>
-            </div>
-        }
+    <div class="my-5">
+        <table class="table table-striped table-dark table-bordered" id="dataTable">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Book</th>
+                    <th class="text-center" scope="col">Approve</th>
+                    <th class="text-center" scope="col">Delete</th>
+                    <th class="text-center" scope="col">View</th>
+                </tr>
+            </thead>
+            <tbody>
+                @for (int i = 0; i <= Model.Count() - 1; i++)
+                {
+                    <tr>
+                        <th scope="row" class="text-center align-middle">@(i + 1)</th>
+                        <td class="align-middle">@Model[i].Title</td>
+
+                        <td class="text-center align-middle">
+                            <a class="btn btn-success modalBtn" data-model-id="@Model[i].Id" data-bs-toggle="modal" data-bs-target="#approveBookModal">
+                                <i class="fa-solid fa-circle-check fa-xl px-2"></i>
+                            </a>
+                        </td>
+                        <td class="text-center align-middle">
+                            <a class="btn btn-danger modalBtn" data-model-id="@Model[i].Id" data-bs-toggle="modal" data-bs-target="#deleteBookModal"><i class="fa-solid fa-trash-can fa-xl px-2"></i></a>
+                        </td>
+                        <td class="text-center align-middle">
+                            <a asp-area="admin" asp-controller="Book" asp-action="CurrentBook" asp-route-bookId="@Model[i].Id" class="btn btn-success">
+                                <i class="fa-solid fa-expand fa-xl px-2"></i>
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
 }
 
-<!-- Unapprove Book Modal -->
+<!-- Approve Book Modal -->
 <div class="modal fade" id="approveBookModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
@@ -38,7 +57,7 @@ else
                 <h1 class="modal-title fs-5" id="exampleModalLabel">Approve Book</h1>
                 <button type="button" class="btn-modal-close" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-x"></i></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body text-center">
                 <strong>Are you sure you want to approve this book?</strong>
             </div>
             <div class="modal-footer">
@@ -60,7 +79,7 @@ else
                 <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Book</h1>
                 <button type="button" class="btn-modal-close" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-x"></i></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body text-center">
                 <strong>Are you sure you want to delete this book?</strong>
             </div>
             <div class="modal-footer">
@@ -76,4 +95,6 @@ else
 
 @section Scripts{
     <script src="~/js/modal.js"></script>
+    <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
+    <script src="~/js/datatable.js"></script>
 }
