--- a/Web/Bookworm.Web/Areas/Admin/Views/Quote/DeletedQuotes.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Quote/DeletedQuotes.cshtml
@@ -54,7 +54,9 @@ else
                             <td class="text-center align-middle"><i class="fa-solid fa-minus fa-xl"></i></td>
                         }
                         <td class="text-center align-middle">
-                            <button class="btn btn-danger quoteBtn" data-quote-id="@Model.Quotes[i].Id" data-bs-toggle="modal" data-bs-target="#undeleteQuoteModal"><i class="fa-solid fa-trash-can-arrow-up fa-xl px-2"></i></button>
+                            <button class="btn btn-danger modalBtn" data-model-id="@Model.Quotes[i].Id" data-bs-toggle="modal" data-bs-target="#undeleteQuoteModal">
+                                <i class="fa-solid fa-trash-can-arrow-up fa-xl px-2"></i>
+                            </button>
                         </td>
                     </tr>
                 }
@@ -77,7 +79,7 @@ else
             <div class="modal-footer">
                 <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
                 <form method="post" asp-area="admin" asp-controller="Quote" asp-action="Undelete">
-                    <input type="hidden" name="quoteId" class="quoteIdInput" value="" />
+                    <input type="hidden" name="quoteId" class="modelIdInput" value="" />
                     <button type="submit" class="btn btn-danger">Undelete</button>
                 </form>
             </div>
@@ -86,7 +88,7 @@ else
 </div>
 
 @section Scripts{
-    <script src="~/js/quotes/quoteModal.js"></script>
+    <script src="~/js/modal.js"></script>
     <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
     <script src="~/js/datatable.js"></script>
 }
