--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <section class="welcomeSection mt-5">
     <h1 class="text-center mb-5 animate__animated animate__jackInTheBox">Welcome to @GlobalConstants.SystemName!</h1>
-    <div class="card mb-5 col-8 d-flex justify-content-center mx-auto border-2">
+    <div class="card mb-5 col-8 d-flex justify-content-center mx-auto border-2 border-dark">
         <div class="card-header fs-4">
             Quote
         </div>
@@ -54,6 +54,3 @@
 
 @*<partial name="_RecentlyUploadedBooksPartial" />
 <partial name="_MostDownloadedBooksPartial" />*@
-
-
-
