Add Admin-lte template for admin area

--- a/Web/Bookworm.Web/Areas/Admin/Views/Book/DeletedBooks.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Book/DeletedBooks.cshtml
@@ -6,11 +6,11 @@
 
 @if (Model.Any() == false)
 {
-    <h2 class="text-center mt-5">There are no deleted books!</h2>
+    <h2 class="text-center pt-5">There are no deleted books!</h2>
 }
 else
 {
-    <h2 class="text-center mt-5">Manage Deleted Books</h2>
+    <h2 class="text-center pt-5">Manage Deleted Books</h2>
     <div class="my-5">
         <table class="table table-striped table-dark table-bordered" id="dataTable">
             <thead>
