--- a/Web/Bookworm.Web/Areas/Admin/Views/Book/ApprovedBooks.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Book/ApprovedBooks.cshtml
@@ -6,11 +6,11 @@
 
 @if (Model.Any() == false)
 {
-    <h2 class="text-center mt-5">There are no approved books yet!</h2>
+    <h2 class="text-center pt-5">There are no approved books yet!</h2>
 }
 else
 {
-    <h2 class="text-center mt-5">Manage Approved Books</h2>
+    <h2 class="text-center pt-5">Manage Approved Books</h2>
     <div class="my-5">
         <table class="table table-striped table-dark table-bordered" id="dataTable">
             <thead>
@@ -27,14 +27,22 @@ else
                     <tr>
                         <th scope="row" class="text-center align-middle">@(i + 1)</th>
                         <td class="align-middle">@Model[i].Title</td>
-
                         <td class="text-center align-middle">
-                            <a class="btn btn-danger modalBtn" data-model-id="@Model[i].Id" data-bs-toggle="modal" data-bs-target="#unapproveBookModal">
+                            <a
+                                class="btn btn-danger modalBtn"
+                                data-model-id="@Model[i].Id"
+                                data-bs-toggle="modal"
+                                data-bs-target="#unapproveBookModal">
                                 <i class="fa-solid fa-circle-xmark fa-xl px-2"></i>
                             </a>
                         </td>
                         <td class="text-center align-middle">
-                            <a asp-area="admin" asp-controller="Book" asp-action="CurrentBook" asp-route-bookId="@Model[i].Id" class="btn btn-success">
+                            <a
+                                asp-area="admin"
+                                asp-controller="Book"
+                                asp-action="CurrentBook"
+                                asp-route-bookId="@Model[i].Id"
+                                class="btn btn-success">
                                 <i class="fa-solid fa-expand fa-xl px-2"></i>
                             </a>
                         </td>
@@ -45,14 +53,17 @@ else
     </div>
 }
 
-
 <!-- Unapprove Book Modal -->
-<div class="modal fade" id="unapproveBookModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div
+    class="modal fade"
+    id="unapproveBookModal"
+    tabindex="-1"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="exampleModalLabel">Unapprove Book</h1>
-                <button type="button" class="btn-modal-close" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-x"></i></button>
             </div>
             <div class="modal-body">
                 <strong>Are you sure you want to unapprove this book?</strong>
@@ -69,7 +80,7 @@ else
 </div>
 
 @section Scripts{
-    <script src="~/js/modal.js"></script>
-    <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
-    <script src="~/js/datatable.js"></script>
+    <script src="/js/modal.js"></script>
+    <script src="/lib/datatables.net/jquery.dataTables.min.js"></script>
+    <script src="/js/datatable.js"></script>
 }
