--- a/Web/Bookworm.Web/Areas/Admin/Views/Quote/UnapprovedQuotes.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Quote/UnapprovedQuotes.cshtml
@@ -6,12 +6,12 @@
 
 @if (Model.Quotes.Count == 0)
 {
-    <h3 class="text-center mt-5 display-3">There are no unapproved quotes!</h3>
+    <h3 class="text-center pt-5 display-3">There are no unapproved quotes!</h3>
 }
 else
 {
-    <h3 class="text-center mt-5">Manage unapproved quotes!</h3>
-    <div class="my-5">
+    <h3 class="text-center pt-5">Manage unapproved quotes!</h3>
+    
         <table class="table table-striped table-dark table-bordered table-responsive" id="dataTable">
             <thead>
                 <tr>
@@ -68,16 +68,20 @@ else
                 }
             </tbody>
         </table>
-    </div>
+
 }
 
 <!-- Approve Quote Modal -->
-<div class="modal fade" id="approveQuoteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div
+    class="modal fade"
+    id="approveQuoteModal"
+    tabindex="-1"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="exampleModalLabel">Approve quote</h1>
-                <button type="button" class="btn-modal-close" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-x"></i></button>
             </div>
             <div class="modal-body">
                 <strong>Are you sure you want to approve this quote?</strong>
@@ -94,12 +98,16 @@ else
 </div>
 
 <!-- Delete Quote Modal -->
-<div class="modal fade" id="deleteQuoteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div
+    class="modal fade"
+    id="deleteQuoteModal"
+    tabindex="-1"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="exampleModalLabel">Delete quote</h1>
-                <button type="button" class="btn-modal-close" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-x"></i></button>
             </div>
             <div class="modal-body">
                 <strong>Are you sure you want to delete this quote?</strong>
