--- a/Web/Bookworm.Web/Areas/Admin/Views/User/Index.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/User/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Manage Users";
 }
 
-<h1 class="text-center mt-5">Users</h1>
+<h1 class="text-center pt-5">Manage Users</h1>
 
 <table class="table table-striped table-dark table-bordered" id="dataTable" width="100%" cellspacing="0">
     <thead>
