--- a/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
@@ -2,149 +2,158 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@ViewData["Title"] - Bookworm</title>
-    <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href="~/lib/bootstrap/css/bootstrap.min.css">
-    <link href="~/css/sb-admin-2.css" rel="stylesheet" asp-append-version="true">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+    <link rel="stylesheet" href="/lib/font-awesome/css/all.min.css"> 
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link href="/lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="/lib/admin-lte/dist/css/adminlte.min.css">
 </head>
+<body class="hold-transition sidebar-mini layout-fixed">
+    <div class="wrapper">
 
-<body id="page-top">
+        <!-- Preloader -->
+        <div class="preloader flex-column justify-content-center align-items-center">
+            <img
+                class="animation__shake"
+                src="/lib/admin-lte/dist/img/AdminLTELogo.png"
+                alt="AdminLTELogo"
+                height="60"
+                width="60">
+        </div>
 
-    <!-- Page Wrapper -->
-    <div id="wrapper">
+        <!-- Navbar -->
+        <nav class="main-header navbar navbar-expand navbar-white navbar-light">
 
-        <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+            <!-- Left navbar links -->
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" data-widget="pushmenu" href="#" role="button">
+                        <i class="fas fa-bars"></i>
+                    </a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block">
+                    <a asp-area="admin" asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
+                </li>
+            </ul>
 
-            <!-- Sidebar - Brand -->
-            <a asp-area="Admin" asp-action="Index" asp-controller="Home" class="sidebar-brand d-flex align-items-center justify-content-center">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
-                </div>
-                <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+            <!-- Right navbar link -->
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" data-widget="fullscreen" href="#" role="button">
+                        <i class="fas fa-expand-arrows-alt"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <!-- /.navbar -->
+
+        <!-- Main Sidebar Container -->
+        <aside class="main-sidebar sidebar-dark-primary elevation-4">
+            <!-- Brand Logo -->
+            <a asp-area="" asp-controller="Home" asp-action="Index" class="brand-link">
+                 <img src="/favicon.ico" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8"> 
+                <span class="brand-text font-weight-light">BookWorm</span>
             </a>
 
-            <li class="nav-item active">
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">
-                    <i class="fas fa-book"></i>
-                    <span>Bookworm</span>
-                </a>
-            </li>
+            <!-- Sidebar -->
+            <div class="sidebar">
+                <!-- Sidebar Menu -->
+                <nav class="mt-2">
+                    <ul
+                        class="nav nav-pills nav-sidebar flex-column"
+                        data-widget="treeview"
+                        role="menu"
+                        data-accordion="false">
+                        <li class="nav-item">
+                            <a asp-area="admin" asp-controller="User" asp-action="Index" class="nav-link">
+                                <i class="nav-icon fas fa-user"></i>
+                                <p>Manage Users</p>
+                            </a>
+                        </li>
+                        <li class="nav-item menu-open">
+                            <a href="#" class="nav-link active">
+                                <i class="nav-icon fas fa-book"></i>
+                                <p>Books<i class="right fas fa-angle-left"></i></p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a asp-area="admin" asp-controller="Book" asp-action="ApprovedBooks" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Manage Approved</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a asp-area="admin" asp-controller="Book" asp-action="UnapprovedBooks" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Manage Unapproved</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a asp-area="admin" asp-controller="Book" asp-action="DeletedBooks" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Manage Deleted</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
 
-            <li class="nav-item active">
-                <a asp-area="admin" asp-controller="User" asp-action="Index" class="nav-link">
-                    <i class="fas fa-user"></i>
-                    <span>Manage Users</span>
-                </a>
-            </li>
+                        <li class="nav-item menu-open">
+                            <a href="#" class="nav-link active">
+                                <i class="nav-icon fas fa-pen icon"></i>
+                                <p>Quotes<i class="right fas fa-angle-left"></i></p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a asp-area="admin" asp-controller="Quote" asp-action="ApprovedQuotes" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Manage Approved</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a asp-area="admin" asp-controller="Quote" asp-action="UnapprovedQuotes" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Manage Unapproved</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a asp-area="admin" asp-controller="Quote" asp-action="DeletedQuotes" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Manage Deleted</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+               
+                        
+                    </ul>
+                </nav>
+                <!-- /.sidebar-menu -->
+            </div>
+            <!-- /.sidebar -->
+        </aside>
 
-            <li class="nav-item active">
-                <a class="nav-link" asp-area="admin" asp-controller="Book" asp-action="ApprovedBooks">
-                    <i class="fas fa-book"></i>
-                    <span>Manage Approved Books</span>
-                </a>
-            </li>
-
-            <li class="nav-item active">
-                <a asp-area="admin" asp-controller="Book" asp-action="UnapprovedBooks" class="nav-link">
-                    <i class="fas fa-book"></i>
-                    <span>Manage Unapproved Books</span>
-                </a>
-            </li>
-
-            <li class="nav-item active">
-                <a class="nav-link" asp-area="admin" asp-controller="Book" asp-action="DeletedBooks">
-                    <i class="fas fa-book"></i>
-                    <span>Manage Deleted Books</span>
-                </a>
-            </li>
-
-            <li class="nav-item active">
-                <a asp-area="admin" asp-controller="Quote" asp-action="ApprovedQuotes" class="nav-link">
-                    <i class="fas fa-pen icon"></i>
-                    <span>Manage Approved Quotes</span>
-                </a>
-            </li>
-
-            <li class="nav-item active">
-                <a asp-area="admin" asp-controller="Quote" asp-action="UnapprovedQuotes" class="nav-link">
-                    <i class="fas fa-pen icon"></i>
-                    <span>Manage Unapproved Quotes</span>
-                </a>
-            </li>
-
-            <li class="nav-item active">
-                <a asp-area="admin" asp-controller="Quote" asp-action="DeletedQuotes" class="nav-link">
-                    <i class="fas fa-pen icon"></i>
-                    <span>Manage Deleted Quotes</span>
-                </a>
-            </li>
-
-            <!-- Sidebar Toggler (Sidebar) -->
-            <li class="text-center d-none d-md-inline">
-                <button class="rounded-circle border-0" id="sidebarToggle"></button>
-            </li>
-
-        </ul>
-        <!-- End of Sidebar -->
-        <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
-
-            <!-- Main Content -->
-            <div id="content">
-
-
-                <!-- Begin Page Content -->
+       
+        <div class="content-wrapper">
+            <!-- Main content -->
+            <section class="content">
                 <div class="container-fluid">
-                    <div class="container">
-                        <partial name="PartialViews/_CookieConsentPartial" />
-                        <main role="main">
-                            @this.RenderBody()
-                        </main>
-                    </div>
-                </div>
-            </div>
+                    @this.RenderBody()
+                </div>  
+            </section>
         </div>
 
-    </div>
-    <!-- End of Main Content -->
-    <!-- Footer -->
-    <footer class="sticky-footer bg-dark text-light">
-        <div class="container my-auto">
-            <div class="copyright text-center my-auto">
-                <span class="fs-1">Copyright &copy; Bookworm @DateTime.UtcNow.Year</span>
-            </div>
-        </div>
-    </footer>
-    <!-- End of Footer -->
-    <!-- Logout Modal-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-         aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@this.Url.Action("Index", "Home", new { area = string.Empty })">Logout</a>
-                </div>
-            </div>
-        </div>
+        <footer class="main-footer">
+            <strong>Copyright &copy; Bookworm @DateTime.UtcNow.Year</strong>
+            All rights reserved.
+        </footer>
     </div>
 
-
-    <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
-    <script src="~/js/sb-admin-2.min.js" asp-append-version="true"></script>
-    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
+    <script src="/lib/jquery/dist/jquery.min.js"></script>
+    <script src="/lib/admin-lte/dist/js/adminlte.min.js"></script>
+    <script src="/lib/bootstrap/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     @await this.RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
